--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,8 +2,31 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSNFCUsageDescription</key>
+	<key>NFCReaderUsageDescription</key>
 	<string>We need access to NFC for scanning tags.</string>
+	   <key>com.apple.developer.nfc.readersession.felica.systemcodes</key>
+     <array>
+       <string>8005</string>
+       <string>8008</string>
+       <string>0003</string>
+       <string>fe00</string>
+       <string>90b7</string>
+       <string>927a</string>
+       <string>86a7</string>
+     </array>
+    <key>com.apple.developer.nfc.readersession.iso7816.select-identifiers</key>
+    <array>
+        <string>A0000002471001</string>
+        <string>A000000003101001</string>
+        <string>A000000003101002</string>
+        <string>A0000000041010</string>
+        <string>A0000000042010</string>
+        <string>A0000000044010</string>
+        <string>44464D46412E44466172653234313031</string>
+        <string>D2760000850100</string>
+        <string>D2760000850101</string>
+        <string>00000000000000</string>
+    </array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
