--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: reminds_flutter
-description: "A new Flutter project."
+description: "A platform for facillitating medication reuse."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -41,7 +41,8 @@ dependencies:
   nfc_manager:
     path: 'deps/flutter-nfc-manager'
   flutter_bloc: ^8.1.6
-
+  http: ^1.3.0
+  device_info_plus: ^9.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
